Done with main JS logic

--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
   <div id="container">
 
     <div id="header">
-      <input id="input" type="text" placeholder="Please enter city">
+      <input id="input" spellcheck="false" type="text" placeholder="Please enter city">
     </div>
 
     <div id="when-where">
-      <p id="city">Montreal, CA</p>
-      <p id="date">Date</p>
+      <p id="city"></p>
+      <p id="date"></p>
     </div>
 
     <div id="now">
-      <p id="temprature">28</p>
-      <p id="feelslike">Feels like</p>
-      <p id="conditions">Sunny</p>
-      <p id="variations">Min Max</p>
+      <p id="temperature"></p>
+      <p id="feelslike"></p>
+      <p id="conditions"></p>
+      <p id="variations"></p>
 
+    </div>
+
+    <div>
+      <p id="sunrise">Sunrise</p>
+      <p id="sunset">Sunset</p>
     </div>
 
   </div>
@@ -36,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
