Working on sunset and sunrise time

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
       <input id="input" spellcheck="false" type="text" placeholder="Please enter city">
     </div>
 
-    <div id="when-where">
-      <p id="city"></p>
-      <p id="date"></p>
+    <div class="container-box">
+      <p id="city">Virginia, USA</p>
+      <p id="date">dfdfdfdfd</p>
     </div>
 
-    <div id="now">
-      <p id="temperature"></p>
-      <p id="feelslike"></p>
-      <p id="conditions"></p>
-      <p id="variations"></p>
+    <div class="container-box">
+      <p id="temperature">22</p>
+      <p id="feelslike">22</p>
+      <p id="conditions">Sunny</p>
+      <p id="variations">Min:ddd, Max:kkkk</p>
 
     </div>
 
-    <div>
+    <div class="container-box">
       <p id="sunrise">Sunrise</p>
       <p id="sunset">Sunset</p>
     </div>
