--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <div id="container">
 
     <div id="header">
+      <div class="container-btn">
+      <button id="btn-celsius"><img src="icons8-celsius-64.png" alt="icon-celsius"></button>
+      <button id="btn-fahrenheit"><img src="icons8-fahrenheit-64.png" alt="icons8-fahrenheit"></button>
+    </div>
       <input id="input" spellcheck="false" type="text" placeholder="Please enter city">
     </div>
 
