JS logic complete

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
     </div>
 
     <div class="container-box">
-      <p id="city">Virginia, USA</p>
-      <p id="date">dfdfdfdfd</p>
+      <p id="city"></p>
+      <p id="date"></p>
     </div>
 
     <div class="container-box">
-      <p id="temperature">22</p>
-      <p id="feelslike">22</p>
-      <p id="conditions">Sunny</p>
-      <p id="variations">Min:ddd, Max:kkkk</p>
+      <p id="temperature"></p>
+      <p id="feelslike"></p>
+      <p id="conditions"></p>
+      <p id="variations"></p>
 
     </div>
 
     <div class="container-box">
-      <p id="sunrise">Sunrise</p>
-      <p id="sunset">Sunset</p>
+      <p id="sunrise"></p>
+      <p id="sunset"></p>
     </div>
 
   </div>
